[project]
name = "cipherswarm"
version = "0.1.0"
description = "A distributed password cracking management system"
authors = [{ name = "UncleSp1d3r", email = "unclesp1d3r@evilbitlabs.io" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[all]~=0.116.1",
    "uvicorn[standard]~=0.35.0",
    "sqlalchemy~=2.0.43",
    "alembic~=1.16.5",
    "pydantic~=2.12.0a1",
    "pydantic-settings~=2.10.1",
    "python-jose[cryptography]~=3.5.0",
    "passlib[bcrypt]~=1.7.4",
    "python-multipart~=0.0.20",
    "celery~=5.5.3",
    "redis~=6.4.0",
    "httpx[http2,brotli,zstd]~=0.28.1",
    "python-dotenv~=1.1.1",
    "email-validator~=2.3.0",
    "loguru~=0.7.3",
    "casbin~=1.43.0",
    "pyjwt~=2.10.1",
    "bcrypt~=4.3.0",
    "cashews[redis,dill]~=7.4.1",
    "packaging~=25.0",
    "timeago~=1.0.16",
    "name-that-hash~=1.11.0",
    "psycopg[binary,pool]~=3.2.10",
    "typing-extensions~=4.15.0",
    "nh3~=0.3.0",
    "minio~=7.2.16",
    "fastapi-csrf-protect~=1.0.6",
    "case-converter~=1.2.0",
    "fastapi-problem~=0.11.4",
    "starlette~=0.47.3",
    "cryptography~=45.0.7",
    "greenlet~=3.2.4",
]

[dependency-groups]
ci = [
    "mdformat-admon~=2.1.1",
    "mdformat-config~=0.2.1",
    "mdformat-footnote~=0.1.1",
    "mdformat-frontmatter~=2.0.8",
    "mdformat-gfm~=0.4.1",
    "mdformat-gfm-alerts~=2.0.0",
    "mdformat-ruff~=0.1.3",
    "mdformat-simple-breaks~=0.0.1",
    "mdformat-tables~=1.0.0",
    "mdformat-toc~=0.3.0",
    "mdformat-web~=0.2.0",
    "mdformat-wikilink~=0.2.0",
]
dev = [
    "pre-commit~=4.3.0",
    "pytest~=8.4.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.2.0",
    "ruff~=0.13.0",
    "polyfactory~=2.22.2",
    "types-passlib~=1.7.7.20250602",
    "types-python-jose~=3.5.0.20250531",
    "testcontainers[postgres,minio]~=4.13.0",
    "deptry~=0.23.1",
    "jsonschema~=4.25.1",
    "mdformat~=0.7.22",
    "pytest-xdist~=3.8.0",
    "basedpyright~=1.31.4",
]
docs = [
    "griffe-pydantic~=1.1.7",
    "griffe-typingdoc~=0.2.9",
    "mkdocs~=1.6.1",
    "mkdocs-awesome-pages-plugin~=2.10.1",
    "mkdocs-exporter~=6.2.0",
    "mkdocs-git-committers-plugin-2~=2.5.0",
    "mkdocs-git-revision-date-localized-plugin~=1.4.7",
    "mkdocs-macros-plugin~=1.3.9",
    "mkdocs-material~=9.6.19",
    "mkdocs-mermaid2-plugin~=1.2.2",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-redirects~=1.2.2",
    "mkdocs-schema-reader~=0.11.1",
    "mkdocstrings[python]~=0.30.0",
    "pydantic-2-mermaid~=0.7.3",
]

[project.scripts]
server = "app.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
indent-width = 4
target-version = "py312"
line-length = 88
fix = true
include = [
    "pyproject.toml",
    "**/src/**/*.py",
    "scripts/**/*.py",
    "tests/**/*.py",
    "packages/**/*.py",
]
exclude = [
    ".git",
    ".basedpyright_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "B008",    # doesn't play well with FastAPI DI
    "COM812",  # Runs counter to Ruff formatting rules
    "C901",    # ignore complex code
    "D100",    # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",    # false positives for local imports
    "E501",    # line too long
    "EM102",   # Stupid error that doesn't make sense
    "EM101",   # Stupid error that doesn't make sense
    "FBT001",  # Stupid rule that doesn't make sense
    "FBT002",  # Stupid rule that doesn't make sense
    "FBT003",  # Stupid rule that doesn't make sense
    "G004",    # I don't care about this rule
    "TRY003",  # external messages in exceptions are too verbose
    "TC001",
    "TC002",   # too many false positives from my own code
    "TC003",
    "TD002",
    "TD003",
    "TRY301",  # Not sure why this is an error
    "PLR0912", # too many arguments is sometimes fine
    "PLR0913", # too many arguments is sometimes fine
    "PLR0915", # too many arguments is sometimes fine
    "PLC0415", # We'll fix this later
    "FIX002",  # Temporary ignore for ruff while I'm still implementing the changes
    "ERA001",  # Temporary ignore for ruff while I'm still implementing the changes
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S",
    "PT011",
    "ARG001",
    "ARG002",  # Unused method arguments (common in pytest fixtures)
    "SLF001",
    "ANN401",
    "ANN001",  # Missing type annotation for function argument
    "ANN202",  # Missing return type annotation for private function
    "T201",
    "PLR2004", #  doesn't much matter for tests
    "B007",    # Loop control variable not used within loop body
]
"alembic/versions/**/*.py" = ["D"]
"tests/conftest.py" = ["ARG001", "SLF001", "ANN401"]
"tests/db/test_session.py" = ["SLF001"]
"scripts/dev/**/*.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = '^(\\.venv|build|dist|alembic)/'
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true


[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
pythonPlatform = "any"
ignore = ["tests/**"]
allowedUntypedLibraries = ["alembic", "fastapi", "pydantic"]
reportUnannotatedClassAttribute = "hint"
reportImplicitOverride = "warning"
reportUnknownMemberType = "hint"
reportUnknownVariableType = "hint"
reportUnknownArgumentType = "hint"
reportUnknownParameterType = "hint"
reportUnsafeMultipleInheritance = "warning"
reportExplicitAny = false
reportAny = "hint"
reportUnusedCallResult = "hint"
reportUninitializedInstanceVariable = "warning"
reportMissingTypeArgument = "hint"
reportDeprecated = "warning"
reportMissingTypeStubs = false
reportPrivateLocalImportUsage = "warning"
reportCallIssue = "hint"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"
changelog_merge_prerelease = true
